** Release Notes

0.5.13 (8/18/2014)
  * changed pbook functions to work both with jobsetID and jediTaskID

0.5.12 (8/15/2014)
  * fixed --loadXML in prun
  * changed prun to allow users to specify suffixes for output containers

0.5.11 (8/14/2014)
  * fixed pathen for --nEventsPerJob and --nEventsPerFile
  * disabled obsolete --useOldStyleOutput

0.5.10 (8/13/2014)
  * fixed prun for --secondaryDS
  * fixed pbook for backward compatibility

0.5.9 (8/12/2014)
  * fixed prun for wildcards in --outputs

0.5.8 (8/12/2014)
  * fixed --noCompile more

0.5.7 (8/12/2014)
  * fixed pathena and prun for event picking
  * fixed --noCompile
  * added a protection against too long output container names

0.5.6 (7/29/2014)
  * fixed pbook for empty transHome    
  * changed prun to allow --secondaryDSs without --inDS	
  * added support for cache nightlies
  * modified %RNDM replacement to allow usage of % as terminator
  * removed 64/32 support in --athenaTag (only --cmtConfig is recommended)

0.5.5 (6/5/2014)
  * ignoring pound symbols in --pfnListignoring pound symbols in --pfnList
  * added a protection against junk message given by voms-proxy-info
  * fixed prun to accept CVMFS ROOT version format

0.5.4
  * fixed --mergeScript

0.5.3
  * fixed --spaceToken
  * fixed --workingGroup
  * fixed json error for SL5
  * fixed RNDM in --exec of prun 
  * added --nEvents and --nEventsPerChunk to prun

0.5.2
  * fixed for transHome=None

0.5.1
  * fixed for --bexec and --destSE

0.5.0
  * the first version with JEDI

0.4.33 (12/13/2013)
  * fixed for new pyAMI

0.4.32 (11/12/2013)
  * setting client_version
  * fixed getCmtConfig to check with installedSW	
  * set --useNewTRF by default in pathena

0.4.31 (9/19/2013)
  * fixed threading in pbook

0.4.30 (9/2/2013)
  * fixed cmtShowProjects to ignore CMTUSERCONTEXT

0.4.29 (8/7/2013)
  * fixed getLatestDBRelease for the change of DBR replication policy

0.4.28 (7/30/2013)