@@ -229,6 +229,8 @@ optP.add_option('--maxCpuCount', action='store', dest='maxCpuCount', default=-1,
                 help='Required CPU count in seconds. Mainly to extend time limit for looping detection')
 optP.add_option('--official', action='store_const', const=True, dest='official',  default=False,
                 help='Produce official dataset')
+optP.add_option('--unlimitNumOutputs', action='store_const', const=True, dest='unlimitNumOutputs',  default=False,
+                help='Remove the limit on the number of outputs. Note that having too many outputs per job causes a severe load on the system. You may be banned if you carelessly use this option') 
 optP.add_option('--descriptionInLFN',action='store',dest='descriptionInLFN',default='',
                 help='LFN is user.nickname.jobsetID.something (e.g. user.harumaki.12345.AOD._00001.pool) by default. This option allows users to put a description string into LFN. i.e., user.nickname.jobsetID.description.something')
 optP.add_option('--extFile', action='store', dest='extFile',  default='',
@@ -1753,11 +1755,15 @@ elif options.goodRunListXML != '':
 else:
     # no input
     taskParamMap['noInput'] = True
+    if options.nEventsPerJob > 0:
+        taskParamMap['nEventsPerJob'] = options.nEventsPerJob
+    else:
+        taskParamMap['nEventsPerJob'] = 1
     if options.split > 0:
         taskParamMap['nEvents'] = options.split
     else:
         taskParamMap['nEvents'] = 1
-    taskParamMap['nEventsPerJob'] = 1
+    taskParamMap['nEvents'] *= taskParamMap['nEventsPerJob']
     taskParamMap['jobParameters'] += [
         {'type':'constant',
          'value': '-i "[]"',
@@ -2016,7 +2022,7 @@ if options.mergeOutput:
     taskParamMap['mergeOutput'] = True
 
 # check task parameters
-PsubUtils.checkTaskParam(taskParamMap)
+PsubUtils.checkTaskParam(taskParamMap,options.unlimitNumOutputs)
 
 if options.verbose:
     tmpLog.debug("==== taskParams ====")
