@@ -126,6 +126,8 @@ optP.add_option('--useDirectIOSites', action='store_const', const=True, dest='us
                 help="Use only sites which use directIO to read input files")
 optP.add_option('--official',action='store_const',const=True,dest='official',default=False,
                 help='Produce official dataset')
+optP.add_option('--unlimitNumOutputs', action='store_const', const=True, dest='unlimitNumOutputs',  default=False,
+                help='Remove the limit on the number of outputs. Note that having too many outputs per job causes a severe load on the system. You may be banned if you carelessly use this option') 
 optP.add_option('--descriptionInLFN',action='store',dest='descriptionInLFN',default='',
                 help='LFN is user.nickname.jobsetID.something (e.g. user.harumaki.12345.AOD._00001.pool) by default. This option allows users to put a description string into LFN. i.e., user.nickname.jobsetID.description.something')
 optP.add_option('--useRootCore',action='store_const',const=True,dest='useRootCore',default=False,
@@ -1619,7 +1621,7 @@ if options.mergeOutput:
     taskParamMap['mergeOutput'] = True
 
 # check task parameters
-PsubUtils.checkTaskParam(taskParamMap)
+PsubUtils.checkTaskParam(taskParamMap,options.unlimitNumOutputs)
 
 if options.verbose:
     tmpLog.debug("==== taskParams ====")
