@@ -2,6 +2,8 @@
 
 0.5.13 (8/18/2014)
   * changed pbook functions to work both with jobsetID and jediTaskID
+  * fixed pathena to take --nEventsPerJob into account when noInput
+  * added --unlimitNumOutputs to pathena/prun
 
 0.5.12 (8/15/2014)
   * fixed --loadXML in prun
